# jiusi_3566_ros2

./: .gitignore
.opencode/skills/acfly-dev/: SKILL.md
offline/: deploy.sh  deploy_3566.sh  deploy_3588.sh  geographiclib-tools_1.52-1_arm64.deb  libacl1-dev_2.3.1-1_arm64.deb  libasio-dev_1%3a1.18.1-1_all.deb  libattr1-dev_1%3a2.5.1-1build1_arm64.deb  libgeographic-dev_1.52-1_arm64.deb  libgeographic19_1.52-1_arm64.deb  libopencv-dev_4.5.4+dfsg-9ubuntu4_arm64.deb  libyaml-cpp0.7_0.7.0+dfsg-8build1_arm64.deb  ros-humble-class-loader_2.2.0-3jammy.20260307.170003_arm64.deb  ros-humble-cv-bridge_3.2.1-1jammy.20260416.072157_arm64.deb  ros-humble-cyclonedds_0.10.5-2jammy.20260307.131623_arm64.deb  ros-humble-diagnostic-msgs_4.9.1-1jammy.20260416.040445_arm64.deb  ros-humble-diagnostic-updater_4.0.6-1jammy.20260423.163707_arm64.deb  ros-humble-eigen-stl-containers_1.1.0-1jammy.20260307.143650_arm64.deb  ros-humble-geographic-msgs_1.0.6-1jammy.20260416.051105_arm64.deb  ros-humble-iceoryx-binding-c_2.0.5-1jammy.20260307.124407_arm64.deb  ros-humble-iceoryx-hoofs_2.0.5-1jammy.20260306.225532_arm64.deb  ros-humble-iceoryx-posh_2.0.5-1jammy.20260307.123554_arm64.deb  ros-humble-image-transport_3.1.12-1jammy.20260423.182242_arm64.deb  ros-humble-libmavconn_2.14.0-1jammy.20260307.155355_arm64.deb  ros-humble-mavlink_2026.3.3-1jammy.20260307.125109_arm64.deb  ros-humble-mavros-extras_2.14.0-1jammy.20260426.073908_arm64.deb  ros-humble-mavros-msgs_2.14.0-1jammy.20260416.055032_arm64.deb  ros-humble-mavros_2.14.0-1jammy.20260426.055425_arm64.deb  ros-humble-mcap-vendor_0.15.16-1jammy.20260307.153233_arm64.deb  ros-humble-message-filters_4.3.16-1jammy.20260423.163929_arm64.deb  ros-humble-nav-msgs_4.9.1-1jammy.20260416.040917_arm64.deb  ros-humble-pcl-conversions_2.4.5-2jammy.20260423.182243_arm64.deb  ros-humble-rmw-cyclonedds-cpp_1.3.4-1jammy.20260605.112510_arm64.deb  ros-humble-rosbag2-storage-mcap_0.15.16-1jammy.20260416.200722_arm64.deb  ros-humble-rosbag2_0.15.16-1jammy.20260426.092152_arm64.deb  ros-humble-sensor-msgs_4.9.1-1jammy.20260416.041627_arm64.deb  ros-humble-std-srvs_4.9.1-1jammy.20260416.045926_arm64.deb  ros-humble-tf2-ros_0.25.20-2jammy.20260423.165110_arm64.deb  tune_boot.sh
src/acfly_daemon/: CMakeLists.txt  PROCESS.md  package.xml
src/acfly_daemon/config/: processes.yaml
src/acfly_daemon/launch/: acfly_daemon.launch.py
src/acfly_daemon/msg/: ProcessStatus.msg
src/acfly_daemon/src/: acfly_daemon_node.cpp
src/acfly_daemon/srv/: GetProcessStatus.srv
src/acfly_mavros/: PROCESS.md
src/acfly_mavros/mavlink-gbp-release/message_definitions/v1.0/: acfly.xml  all.xml  commonACFly.xml
src/acfly_mavros/mavros/mavros/include/mavros/: mavros_router.hpp
src/acfly_mavros/mavros/mavros/launch/: acfly.launch.py  acfly_config.yaml  apm_pluginlists.yaml
src/acfly_mavros/mavros/mavros/src/lib/: mavros_router.cpp  mavros_uas.cpp  uas_executor.cpp
src/acfly_odometry/: CMakeLists.txt  PROCESS.md  package.xml
src/acfly_odometry/config/: acfly_odometry.yaml
src/acfly_odometry/launch/: acfly_odometry.launch.py
src/acfly_odometry/msg/: CovDiag.msg
src/acfly_odometry/src/: acfly_odometry_node.cpp
src/bag_logd/: CMakeLists.txt  PROCESS.md  package.xml
src/bag_logd/config/: bag_logd.yaml  rosbag2_qos.yaml
src/bag_logd/launch/: bag_logd.launch.py
src/bag_logd/src/: bag_logd_node.cpp
src/odin_ros_driver/: CHANGELOG.md  CMakeLists.txt  DETAILED.md  PROCESS.md  README.md
src/odin_ros_driver/config/: control_command.yaml
src/odin_ros_driver/include/: host_sdk_sample.h
src/odin_ros_driver/src/: cloud_reprojection_ros.cpp  host_sdk_sample.cpp  pcd2depth_ros2.cpp
src/timesync/: CMakeLists.txt  PROCESS.md  package.xml
src/timesync/config/: timesync.yaml
src/timesync/launch/: timesync.launch.py
src/timesync/src/: time_sync_node.cpp
tool/: run_viewer.sh  viewer_config.json
tool/mask/: build_linux.sh  extract_frames.py  mask_editor.py
tool/ros2bag_viewer/: sensor_viewer.py  viewer_config.json
