<?xml version="1.0"?>
<package format="3">
  <name>acfly_odometry</name>
  <version>0.1.0</version>
  <description>Gravity-align Odin1 SLAM odometry attitude using FCU attitude estimate</description>
  <maintainer email="acfly@example.com">acfly</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
