<?xml version="1.0"?>
<package format="3">
  <name>bag_logd</name>
  <version>0.1.0</version>
  <description>Flight data recorder (black box) with arm-triggered rolling-window recording</description>
  <maintainer email="acfly@example.com">acfly</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_compression</depend>
  <depend>rosbag2_storage</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
